# soroban-lint

./: CONTRIBUTING.md  Cargo.toml  README.md  WAVE_ISSUES.md
.github/ISSUE_TEMPLATE/: new_lint_rule.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  runner.rs
src/lints/: hardcoded_address.rs  missing_auth_check.rs  missing_error_type.rs  mod.rs  panic_in_contract.rs  unbumped_ttl.rs  unused_storage_key.rs
tests/: missing_auth_check.rs  panic_in_contract.rs  unbumped_ttl.rs
